Fixing variable name in template

--- a/libbeat/tests/system/config/mockbeat.yml.j2
+++ b/libbeat/tests/system/config/mockbeat.yml.j2
@@ -111,7 +111,7 @@ xpack.monitoring.elasticsearch.state.period: 3s      # to speed up tests
 
 {% if monitoring -%}
 #================================ X-Pack Monitoring (direct) =====================================
-monitoring.elasticsearch.hosts: {{xpack.monitoring.elasticsearch.hosts}}
+monitoring.elasticsearch.hosts: {{monitoring.elasticsearch.hosts}}
 monitoring.elasticsearch.metrics.period: 2s    # to speed up tests
 monitoring.elasticsearch.state.period: 3s      # to speed up tests
 {% endif -%}
