--- a/x-pack/winlogbeat/_meta/beat.yml.tmpl
+++ b/x-pack/winlogbeat/_meta/beat.yml.tmpl
@@ -6,4 +6,17 @@ winlogbeat.event_logs:
   - name: System
 
   - name: Security
+    processors:
+      - script:
+          lang: javascript
+          id: security
+          file: ${path.home}/module/security/config/winlogbeat-security.js
+
+  - name: Microsoft-Windows-Sysmon/Operational
+    processors:
+      - script:
+          lang: javascript
+          id: sysmon
+          file: ${path.home}/module/sysmon/config/winlogbeat-sysmon.js
+
 {{if not .Reference}}{{ template "elasticsearch_settings" . }}{{end}}
