--- a/packetbeat/tests/system/config/packetbeat.yml.j2
+++ b/packetbeat/tests/system/config/packetbeat.yml.j2
@@ -7,6 +7,7 @@ packetbeat.interfaces.device: {{ iface_device|default("any") }}
 {% if af_packet %}
 packetbeat.interfaces.type: af_packet
 packetbeat.interfaces.buffer_size_mb: 100
+packetbeat.interfaces.auto_promisc_mode: true
 {% endif %}
 
 {% if bpf_filter %}
