--- a/x-pack/auditbeat/module/system/_meta/config.yml.tmpl
+++ b/x-pack/auditbeat/module/system/_meta/config.yml.tmpl
@@ -36,11 +36,13 @@
   {{- end }}
 {{ end }}
   {{ if eq .GOOS "linux" -}}
-{{ if .Reference }}
+
+{{ if .Reference -}}
   # Disabled by default. If enabled, the socket dataset will
   # report local connections.
-  socket.include_localhost: false
-{{- end }}
+  # socket.include_localhost: false
+
+{{ end -}}
 
   # Enabled by default. Auditbeat will read password fields in
   # /etc/passwd and /etc/shadow and store a hash locally to
