Whitespace in docs.

--- a/x-pack/auditbeat/module/system/_meta/config.yml.tmpl
+++ b/x-pack/auditbeat/module/system/_meta/config.yml.tmpl
@@ -42,7 +42,7 @@
 {{- if .Reference }}
 
   # Disabled by default. If enabled, the socket dataset will
-  # report local connections.
+  # report sockets to and from localhost.
   # socket.include_localhost: false
 {{- end }}
 
