make AWS endpoint configurable && fix URL template

--- a/x-pack/functionbeat/tests/system/config/functionbeat.yml.j2
+++ b/x-pack/functionbeat/tests/system/config/functionbeat.yml.j2
@@ -7,6 +7,7 @@ functionbeat.provider.local:
 {% endif %}
 
 {% if cloudwatch %}
+functionbeat.provider.aws.endpoint: {{ cloudwatch.endpoint | default("s3.amazonaws.com") }}
 functionbeat.provider.aws.deploy_bucket: {{ cloudwatch.bucket | default("functionbeat-deploy") }}
 functionbeat.provider.aws.functions:
   - name: {{ cloudwatch.name }}
